--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -19,9 +19,9 @@
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #bac1ca; opacity: 0.85;">
             <div class="container-fluid" style="opacity: 1;">
             <a class="navbar-brand" href="https://www.ktu.edu.tr/">
-                <img width="35px" height="30px"src="https://upload.wikimedia.org/wikipedia/tr/7/7d/KTU_Yeni_Logo.png" style="position:relative;">
+                <img width="40px" height="40px"src="/media/uni_logo.png" style="position:relative;">
             </a>
-            <a class="navbar-brand"  href="{% url 'blog-home' %}"> <small> ktu<strong>overflow</strong></small></a>
+            <a class="navbar-brand"  href="{% url 'blog-home' %}"> <small> University<strong>overflow</strong></small></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
